# libcpak

./: .gitignore  .newsource  AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.md  configure  configure.ac
lib/: Makefile.am  Makefile.in  core.c  libcpak.h  messages.c  sysfun.c
lib/libcpak/: Makefile.am  core.h  messages.h  sysfun.h
replace/: replace.h  strdup.c
src/: Makefile.am  Makefile.in  cpak-info.c
test/: Makefile.am  Makefile.in  test-core.c  test-sysfun.c
